--- a/.github/workflows/build_jar.yml
+++ b/.github/workflows/build_jar.yml
@@ -14,7 +14,7 @@ jobs:
   build-jar:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -30,9 +30,9 @@ jobs:
       - name: Run the Maven verify phase
         run: mvn verify -f "pom.xml"
 
-      - run: mkdir staging && cp target/NoSnow*.jar staging
-
-      - uses: actions/upload-artifact@v4
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          name: Package
-          path: staging
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/NoSnow*.jar
+          tag: ${{ github.ref }}
