fix(ci): bump workflow

--- a/.github/workflows/build_jar.yml
+++ b/.github/workflows/build_jar.yml
@@ -36,3 +36,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/NoSnow*.jar
           tag: ${{ github.ref }}
+          overwrite: true
+          file_glob: true
